# ogame

./: .gitignore  README.md  notes.org
game_backend/: README.md  pyproject.toml
game_backend/game_backend/: app.py  components.py  config.py  entities.py  entity.py  game.py  game_data.py  game_model.py  game_structs.py  init_game.py  resources.py
game_backend/game_backend/ecs/: component.py  entity.py  system.py
game_backend/game_backend/entities/: buildings.py  entities.py  research.py  ships.py
game_backend/game_backend/systems/: building_system.py  combat_system.py  mission_system.py  position_system.py  production_system.py  ship_building_system.py  upgrade_system.py
game_backend/tests/: test_ecs.py  test_game_backend.py
game_cli_client/: pyproject.toml
game_cli_client/game_cli_client/: basic_client.py
game_cli_client/tests/: test_game_cli_client.py
