[tool.poetry]
name = "game_cli_client"
version = "0.1.0"
description = ""
authors = ["Maxime Fournes <fournes.maxime@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
